# llmgrader

./: .gitignore  AGENTS.md  CLAUDE.md  CONFIG_README.md  MANIFEST.in  _config.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml  claude.yml
agentdocs/: authoring.md
agentdocs/templates/: minimal_question.xml  partial_credit_question.xml
docs/: development.md  index.md
docs/admin/: index.md  password.md
docs/analytics/: dbviewer.md  index.md
docs/developer/: index.md  pytest.md  setup.md
docs/overview/: academicintegrity.md  architecture.md  dataprivacy.md  index.md  llm-grader-architecture.drawio
docs/student/: dashboard.md  grade.md  index.md  openai.md  projects.md
example_repo/: llmgrader_config.xml  unit1_basic_logic.xml
example_repo/unit1/: basic_logic.xml  calculus.xml
example_repo/unit2/: numbers.xml  python.xml
experiment/: test_mcp.ipynb  websearch.py
graderchat/: app.py
graderchat.egg-info/: SOURCES.txt
graderchat/routes/: api.py
graderchat/services/: grader.py
graderchat/templates/: index.html
llmgrader/: app.py  config.py
llmgrader/gradescope/: autograde.py  requirements.txt
llmgrader/mcp/: README.md  __init__.py  blind_user_llm.py  config_xml_tools.py  description_utils.py  example_tools.py  server.py  unit_xml_tools.py
llmgrader/routes/: api.py  main.py
llmgrader/schemas/: llmgrader_config.xsd  unit.xsd
llmgrader/scripts/: build_autograder.py  create_qfile.py  create_soln_pkg.py  generate_signing_keys.py  llmgrader_env_vars.py  llmgrader_mcp_setup.py
llmgrader/services/: grader.py  llm_client.py  parselatex.py  prompt.py  repo.py  signing.py  unit_parser.py
llmgrader/templates/: index.html  (+1 more)
soln_repos/: demo_unit.xml  llmgrader_config.xml  unit1_calculus.xml  unit2_python.xml
submission/: student_soln.tex
tests/: test_auth.py  test_create_qfile.py  test_create_soln_pkg.py  test_grader_db_migration.py  test_llmgrader_env_vars.py  test_mcp_server.py  test_pkg_assets_route.py  test_prompt_builder.py  test_unit_parser.py
(+88 files in other folders)
