[project]
name = "llmgrader"
version = "0.1.0"
description = "Lightweight Flask-based chatbot autograder"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "flask",
    "xmlschema>=3,<4"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llmgrader*"]

[tool.setuptools.package-data]
llmgrader = ["schemas/*.xsd"]

[project.scripts]
create_grading_json = "llmgrader.utils.create_grading_json:main"
build_autograder = "llmgrader.scripts.build_autograder:main"
create_qfile = "llmgrader.scripts.create_qfile:main"
create_soln_pkg = "llmgrader.scripts.create_soln_pkg:main"

