[project]
name = "llmgrader"
version = "0.1.0"
description = "Lightweight Flask-based chatbot autograder"
authors = [
    { name = "Your Name" }
]
dependencies = [
    "flask",
    "xmlschema>=3,<4",
    "mcp>=1.27.0,<2",
    "openai>=2,<3",
    "pydantic>=2,<3",
    "pandas",
    "requests",
    "cryptography>=43"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llmgrader*"]

[tool.setuptools.package-data]
llmgrader = ["schemas/*.xsd", "mcp/resources/*.json"]

[tool.pytest.ini_options]
# UI tests require Playwright browsers; run separately with:
#   pytest tests/ui/ --browser chromium
# Regular unit tests exclude the UI suite:
#   pytest --ignore=tests/ui/

[project.scripts]
create_grading_json = "llmgrader.utils.create_grading_json:main"
build_autograder = "llmgrader.scripts.build_autograder:main"
create_qfile = "llmgrader.scripts.create_qfile:main"
create_soln_pkg = "llmgrader.scripts.create_soln_pkg:main"
llmgrader_env_vars = "llmgrader.scripts.llmgrader_env_vars:main"
llmgrader_mcp_setup = "llmgrader.scripts.llmgrader_mcp_setup:main"
llmgrader_mcp_server = "llmgrader.mcp.server:main"
generate_signing_keys = "llmgrader.scripts.generate_signing_keys:main"
